# Agrippa

./: DEV.md  Dockerfile  README.md  config.template.linux.json  config.template.linux.yaml  config.template.mac.json  config.template.mac.yaml  config.template.windows.json  config.template.windows.yaml  dev-guide.md  dist.pl  dist.sh  install.sh
backend/: agrippa-config.json  agrippa-config.linux.json  agrippa-config.mac.json  backend.cabal
backend/app/: Main.hs
client/: .gitignore  bower.json
client/src/Agrippa/: Config.purs  Help.purs  Main.purs  Utils.purs
client/src/Agrippa/Plugins/: Base.purs  Calculator.purs  Clock.purs  ExecutableLauncher.purs  FileSearch.purs  Help.purs  KeePass1.js  KeePass1.purs  LauncherUtils.js  LauncherUtils.purs  MacAppLauncher.purs  MortgageCalc.purs  OnlineSearch.purs  PluginType.purs  Registry.purs  Snippets.js  Snippets.purs  TaskList.purs  TaskSearch.js  TaskSearch.purs
client/src/Agrippa/Plugins/FileSystem/: Commons.js  Commons.purs  ExecutableSearch.purs  FileSearch.purs  LinuxFileSearch.purs  MacAppSearch.purs  MacFileSearch.purs  UnixExecutableSearch.purs  WinExecutableSearch.purs  WinFileSearch.purs
client/src/Agrippa/Plugins/Launchers/: ExecutableLauncher.purs  LauncherUtils.js  LauncherUtils.purs  MacAppLauncher.purs
client/web/: agrippa-plugin-Clock.js  agrippa-plugin-KeePass1.js  agrippa-plugin-MortgageCalc.js  agrippa-plugin-OnlineSearch.js  agrippa-plugin-Snippets.js  agrippa-plugin-TaskSearch.js  agrippa.js  index.html  styles.css
docs/: development.md  development.org  plugins.md
frontend/: bower.json  index.html
frontend/src/: Main.purs
frontend/src/Agrippa/: Config.purs  Main.purs  Utils.purs
frontend/src/Agrippa/Plugins/: AppLauncher.purs  Bookmark.purs  Calculator.purs  Dictionary.purs  ExecutableLauncher.purs  FileSearch.purs  FileSearcher.purs  Launcher.purs  LauncherUtils.purs  MacAppLauncher.purs  OnlineSearch.js  OnlineSearch.purs  Registry.purs  Utils.purs  WikiSearcher.purs
frontend/web/: index.html
server/: LICENSE  README.md  agrippa-config.linux.json  agrippa-config.mac.json  agrippa-server.cabal  stack.yaml  web
server/app/: Main.hs
server/src/Agrippa/: Main.hs  Utils.hs
server/src/Agrippa/Plugins/: KeePass1.hs
server/src/Agrippa/Plugins/FileSystem/: Commons.hs  ExecutableSearch.hs  FileSearch.hs  Index.hs  IndexBuilder.hs  LinuxFileSearch.hs  MacAppSearch.hs  MacFileSearch.hs  UnixExecutableSearch.hs  WinExecutableSearch.hs  WinFileSearch.hs
