name:                agrippa-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/harryxp/Agrippa#readme
license:             BSD3
license-file:        LICENSE
author:              Harry Pan
maintainer:          pan.xingzhi@gmail.com
copyright:           2017 Harry Pan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Agrippa.Main
                     , Agrippa.Utils
                     , Agrippa.Plugins.FileSystem.Commons
                     , Agrippa.Plugins.FileSystem.IndexBuilder
                     , Agrippa.Plugins.FileSystem.ExecutableSearch
                     , Agrippa.Plugins.FileSystem.LinuxFileSearch
                     , Agrippa.Plugins.FileSystem.MacAppSearch
                     , Agrippa.Plugins.FileSystem.MacFileSearch
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.0.2.1
                     , bytestring >= 0.10.8.1
                     , directory >= 1.3.0.0
                     , filemanip >= 0.3.6.1
                     , filepath >= 1.4.1.1
                     , process >= 1.4.3.0
                     , scotty >= 0.11.0
                     , split >= 0.2.3.2
                     , text >= 1.2.2.1
                     , unordered-containers >= 0.2.8.0
                     , warp >= 3.2.12
  default-language:    Haskell2010

executable agrippad
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , agrippa-server
  default-language:    Haskell2010

test-suite agrippa-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , agrippa-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/harryxp/Agrippa
