name:                agrippa-server
version:             0.2.0.0
-- synopsis:
-- description:
homepage:            https://github.com/harryxp/Agrippa#readme
license:             BSD3
license-file:        LICENSE
author:              Harry Pan
maintainer:          pan.xingzhi@gmail.com
copyright:           2017-2018 Harry Pan
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  default-extensions:  OverloadedStrings
  exposed-modules:     Agrippa.Main
                     , Agrippa.Utils
                     , Agrippa.Plugins.FileSystem.Commons
                     , Agrippa.Plugins.FileSystem.IndexBuilder
                     , Agrippa.Plugins.FileSystem.LinuxFileSearch
                     , Agrippa.Plugins.FileSystem.MacAppSearch
                     , Agrippa.Plugins.FileSystem.MacFileSearch
                     , Agrippa.Plugins.FileSystem.UnixExecutableSearch
                     , Agrippa.Plugins.FileSystem.WinExecutableSearch
                     , Agrippa.Plugins.FileSystem.WinFileSearch
                     , Agrippa.Plugins.KeePass1
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.2.4.0
                     , async >= 2.1.1.1
                     , bytestring >= 0.10.8.2
                     , cipher-aes >= 0.2.11
                     , cryptohash >= 0.11.9
                     , directory >= 1.3.0.2
                     , filemanip >= 0.3.6.3
                     , filepath >= 1.4.1.2
                     , process >= 1.6.1.0
                     , scotty >= 0.11.0
                     , split >= 0.2.3.3
                     , text >= 1.2.2.2
                     , timeit >= 1.0.0.0
                     , unordered-containers >= 0.2.8.0
                     , utf8-string >= 1.0.1.1
                     , warp >= 3.2.13
  default-language:    Haskell2010

executable agrippad
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  default-extensions:  OverloadedStrings
  build-depends:       base
                     , agrippa-server
                     , directory >= 1.3.0.2
                     , filepath >= 1.4.1.2
  default-language:    Haskell2010

test-suite agrippa-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , agrippa-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -Wincomplete-uni-patterns -Wincomplete-record-updates -Wmissing-import-lists
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/harryxp/Agrippa
